--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -1,3 +1,4 @@
+% Encoding: UTF-8
 
 @Article{R1Godinez-Zamora2020a,
   author   = {Guido Godínez-Zamora and Luis Victor-Gallardo and Jam Angulo-Paniagua and Eunice Ramos and Mark Howells and Will Usher and Felipe De León and Andrea Meza and Jairo Quirós-Tortós},
