Referencias sin tildes

--- a/docs/Bibliography.bib
+++ b/docs/Bibliography.bib
@@ -1,6 +1,6 @@
 
 @Article{R1GodinezZamora2020a,
-  author   = {Guido Godinez-Zamora and Luis Victor-Gallardo and Jam Angulo-Paniagua and Eunice Ramos and Mark Howells and Will Usher and Felipe De León and Andrea Meza and Jairo Quiros-Tortos},
+  author   = {Guido Godinez-Zamora and Luis Victor-Gallardo and Jam Angulo-Paniagua and Eunice Ramos and Mark Howells and Will Usher and Felipe De Leon and Andrea Meza and Jairo Quiros-Tortos},
   title    = {Decarbonising the transport and energy sectors: Technical feasibility and socioeconomic impacts in Costa Rica},
   doi      = {10.1016/j.esr.2020.100573},
   issn     = {2211467X},
@@ -50,7 +50,7 @@
 }
 
 @report{R5CBA_2020,
-   author = {David G Groves and James Syme and Edmundo Molina-Pérez and Carlos Calvo and Hernandez Rand and Luis Víctor-Gallardo and Guido Godínez-Zamora and Valentina Saavedra-Gómez and Adrien Vogt-Schilb and Inter-american Development Bank},
+   author = {David G Groves and James Syme and Edmundo Molina-Perez and Carlos Calvo and Hernandez Rand and Luis Victor-Gallardo and Guido Godinez-Zamora and Valentina Saavedra-Gomez and Adrien Vogt-Schilb and Inter-american Development Bank},
    doi = {http://dx.doi.org/10.18235/0002867},
    institution = {Interamerican Development Bank},
    title = {The Benefits and Costs Of Decarbonizing Costa Rica's Economy: Informing the Implementation of Costa Rica's National Decarbonization Plan under Uncertainty},
