Corrigiendo una referencia

--- a/docs/Bibliography.bib
+++ b/docs/Bibliography.bib
@@ -1,5 +1,5 @@
 
-@Article{R1GodinezZamora2020a,
+@article{R1GodinezZamora2020a,
   author   = {Guido Godinez-Zamora and Luis Victor-Gallardo and Jam Angulo-Paniagua and Eunice Ramos and Mark Howells and Will Usher and Felipe De Leon and Andrea Meza and Jairo Quiros-Tortos},
   title    = {Decarbonising the transport and energy sectors: Technical feasibility and socioeconomic impacts in Costa Rica},
   doi      = {10.1016/j.esr.2020.100573},
@@ -23,20 +23,19 @@
    year = {2011},
 }
 
-@Generic{R3Ringkjob2018,
-  doi       = {10.1016/j.rser.2018.08.002},
-  issn      = {18790690},
-  issue     = {July},
-  journal   = {Renewable and Sustainable Energy Reviews},
-  pages     = {440-459},
-  publisher = {Elsevier Ltd},
-  title     = {A review of modelling tools for energy and electricity systems with large shares of variable renewables},
-  url       = {https://doi.org/10.1016/j.rser.2018.08.002},
-  volume    = {96},
-  year      = {2018},
+@article{R3Ringkjob2018,
+title = {A review of modelling tools for energy and electricity systems with large shares of variable renewables},
+journal = {Renewable and Sustainable Energy Reviews},
+volume = {96},
+pages = {440-459},
+year = {2018},
+issn = {1364-0321},
+doi = {https://doi.org/10.1016/j.rser.2018.08.002},
+url = {https://www.sciencedirect.com/science/article/pii/S1364032118305690},
+author = {Hans-Kristian Ringkjøb and Peter M. Haugan and Ida Marie Solbrekke},
 }
 
-@Article{R4Niet2021,
+@article{R4Niet2021,
   author    = {T. Niet and A. Shivakumar and F. Gardumi and W. Usher and E. Williams and M. Howells},
   title     = {Developing a community of practice around an open source energy modelling tool},
   doi       = {10.1016/j.esr.2021.100650},
