Corrigiendo una referencia

--- a/docs/Bibliography.bib
+++ b/docs/Bibliography.bib
@@ -9,6 +9,7 @@
   year     = {2020},
 }
 
+
 @article{R2Howells2011,
    author = {Mark Howells and Holger Rogner and Neil Strachan and Charles Heaps and Hillard Huntington and Socrates Kypreos and Alison Hughes and Semida Silveira and Joe DeCarolis and Morgan Bazillian and Alexander Roehrl},
    doi = {10.1016/j.enpol.2011.06.033},
@@ -23,6 +24,7 @@
    year = {2011},
 }
 
+
 @article{R3Ringkjob2018,
 title = {A review of modelling tools for energy and electricity systems with large shares of variable renewables},
 journal = {Renewable and Sustainable Energy Reviews},
@@ -32,8 +34,9 @@ year = {2018},
 issn = {1364-0321},
 doi = {https://doi.org/10.1016/j.rser.2018.08.002},
 url = {https://www.sciencedirect.com/science/article/pii/S1364032118305690},
-author = {Hans-Kristian Ringkjøb and Peter M. Haugan and Ida Marie Solbrekke},
+author = {Hans-Kristian Ringkjob and Peter M. Haugan and Ida Marie Solbrekke},
 }
+
 
 @article{R4Niet2021,
   author    = {T. Niet and A. Shivakumar and F. Gardumi and W. Usher and E. Williams and M. Howells},
@@ -47,6 +50,7 @@ author = {Hans-Kristian Ringkjøb and Peter M. Haugan and Ida Marie Solbrekke},
   publisher = {Elsevier Ltd},
   year      = {2021},
 }
+
 
 @report{R5CBA_2020,
    author = {David G Groves and James Syme and Edmundo Molina-Perez and Carlos Calvo and Hernandez Rand and Luis Victor-Gallardo and Guido Godinez-Zamora and Valentina Saavedra-Gomez and Adrien Vogt-Schilb and Inter-american Development Bank},
