--- a/docs/Bibliography.bib
+++ b/docs/Bibliography.bib
@@ -1,63 +1,38 @@
+% Encoding: UTF-8
 
-@article{R1GodinezZamora2020a,
-  author   = {Guido Godinez-Zamora and Luis Victor-Gallardo and Jam Angulo-Paniagua and Eunice Ramos and Mark Howells and Will Usher and Felipe De Leon and Andrea Meza and Jairo Quiros-Tortos},
-  title    = {Decarbonising the transport and energy sectors: Technical feasibility and socioeconomic impacts in Costa Rica},
-  doi      = {10.1016/j.esr.2020.100573},
-  issn     = {2211467X},
-  volume   = {32},
-  journal  = {Energy Strategy Reviews},
-  year     = {2020},
+@Article{R1GodinezZamora2020a,
+  author  = {Guido Godinez-Zamora and Luis Victor-Gallardo and Jam Angulo-Paniagua and Eunice Ramos and Mark Howells and Will Usher and Felipe De Leon and Andrea Meza and Jairo Quiros-Tortos},
+  journal = {Energy Strategy Reviews},
+  title   = {Decarbonising the transport and energy sectors: Technical feasibility and socioeconomic impacts in Costa Rica},
+  year    = {2020},
 }
 
-
-@article{R2Howells2011,
-   author = {Mark Howells and Holger Rogner and Neil Strachan and Charles Heaps and Hillard Huntington and Socrates Kypreos and Alison Hughes and Semida Silveira and Joe DeCarolis and Morgan Bazillian and Alexander Roehrl},
-   doi = {10.1016/j.enpol.2011.06.033},
-   isbn = {0301-4215},
-   issn = {03014215},
-   issue = {10},
-   journal = {Energy Policy},
-   pages = {5850-5870},
-   publisher = {Elsevier},
-   title = {OSeMOSYS: The Open Source Energy Modeling System. An introduction to its ethos, structure and development.},
-   volume = {39},
-   year = {2011},
+@Article{R2Howells2011,
+  author  = {Mark Howells and Holger Rogner and Neil Strachan and Charles Heaps and Hillard Huntington and Socrates Kypreos and Alison Hughes and Semida Silveira and Joe DeCarolis and Morgan Bazillian and Alexander Roehrl},
+  journal = {Energy Policy},
+  title   = {OSeMOSYS: The Open Source Energy Modeling System. An introduction to its ethos, structure and development},
+  year    = {2011},
 }
 
-
-@article{R3Ringkjob2018,
-title = {A review of modelling tools for energy and electricity systems with large shares of variable renewables},
-journal = {Renewable and Sustainable Energy Reviews},
-volume = {96},
-pages = {440-459},
-year = {2018},
-issn = {1364-0321},
-doi = {https://doi.org/10.1016/j.rser.2018.08.002},
-url = {https://www.sciencedirect.com/science/article/pii/S1364032118305690},
-author = {Hans-Kristian Ringkjob and Peter M. Haugan and Ida Marie Solbrekke},
+@Article{R3Ringkjob2018,
+  author  = {Hans-Kristian Ringkjøb and Peter M. Haugan and Ida Marie Solbrekke},
+  journal = {Renewable and Sustainable Energy Reviews},
+  title   = {A review of modelling tools for energy and electricity systems with large shares of variable renewables},
+  year    = {2018},
 }
 
-
-@article{R4Niet2021,
-  author    = {T. Niet and A. Shivakumar and F. Gardumi and W. Usher and E. Williams and M. Howells},
-  title     = {Developing a community of practice around an open source energy modelling tool},
-  doi       = {10.1016/j.esr.2021.100650},
-  issn      = {2211467X},
-  volume    = {35},
-  journal   = {Energy Strategy Reviews},
-  keywords  = {Energy system modelling, Open source software, Outreach, Public policy, Software development},
-  month     = {5},
-  publisher = {Elsevier Ltd},
-  year      = {2021},
+@Article{R4Niet2021,
+  author  = {T. Niet and A. Shivakumar and F. Gardumi and W. Usher and E. Williams and M. Howells},
+  journal = {Energy Strategy Reviews},
+  title   = {Developing a community of practice around an open source energy modelling tool},
+  year    = {2021},
 }
 
-
-@report{R5CBA_2020,
-   author = {David G Groves and James Syme and Edmundo Molina-Perez and Carlos Calvo and Hernandez Rand and Luis Victor-Gallardo and Guido Godinez-Zamora and Valentina Saavedra-Gomez and Adrien Vogt-Schilb and Inter-american Development Bank},
-   doi = {http://dx.doi.org/10.18235/0002867},
-   institution = {Interamerican Development Bank},
-   title = {The Benefits and Costs Of Decarbonizing Costa Rica's Economy: Informing the Implementation of Costa Rica's National Decarbonization Plan under Uncertainty},
-   url = {https://publications.iadb.org/en/benefits-and-costs-decarbonizing-costa-ricas-economy-informing-implementation-costa-ricas-national},
-   year = {2020},
+@TechReport{R5CBA_2020,
+  author      = {David G Groves and James Syme and Edmundo Molina-Perez and Carlos Calvo and Hernandez Rand and Luis Victor-Gallardo and Guido Godinez-Zamora and Valentina Saavedra-Gomez and Adrien Vogt-Schilb and Inter-american Development Bank},
+  institution = {Interamerican Development Bank},
+  title       = {The Benefits and Costs Of Decarbonizing Costa Rica's Economy: Informing the Implementation of Costa Rica's National Decarbonization Plan under Uncertainty},
+  year        = {2020},
 }
 
+@Comment{jabref-meta: databaseType:bibtex;}
