Corrigiendo todas las referencias

--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -10,7 +10,7 @@
   year     = {2020},
 }
 
-@article{R2Howells2011,
+@Article{R2Howells2011,
    author = {Mark Howells and Holger Rogner and Neil Strachan and Charles Heaps and Hillard Huntington and Socrates Kypreos and Alison Hughes and Semida Silveira and Joe DeCarolis and Morgan Bazillian and Alexander Roehrl},
    doi = {10.1016/j.enpol.2011.06.033},
    isbn = {0301-4215},
@@ -24,17 +24,11 @@
    year = {2011},
 }
 
-@Generic{R3Ringkjob2018,
-  doi       = {10.1016/j.rser.2018.08.002},
-  issn      = {18790690},
-  issue     = {July},
-  journal   = {Renewable and Sustainable Energy Reviews},
-  pages     = {440-459},
-  publisher = {Elsevier Ltd},
-  title     = {A review of modelling tools for energy and electricity systems with large shares of variable renewables},
-  url       = {https://doi.org/10.1016/j.rser.2018.08.002},
-  volume    = {96},
-  year      = {2018},
+@Article{R3Ringkjob2018,
+  author  = {Hans-Kristian Ringkjøb and Peter M. Haugan and Ida Marie Solbrekke},
+  journal = {Renewable and Sustainable Energy Reviews},
+  title   = {A review of modelling tools for energy and electricity systems with large shares of variable renewables},
+  year    = {2018},
 }
 
 @Article{R4Niet2021,
@@ -50,7 +44,7 @@
   year      = {2021},
 }
 
-@report{R5CBA_2020,
+@TechReport{R5CBA_2020,
    author = {David G Groves and James Syme and Edmundo Molina-Pérez and Carlos Calvo and Hernandez Rand and Luis Víctor-Gallardo and Guido Godínez-Zamora and Valentina Saavedra-Gómez and Adrien Vogt-Schilb and Inter-american Development Bank},
    doi = {http://dx.doi.org/10.18235/0002867},
    institution = {Interamerican Development Bank},
@@ -59,7 +53,7 @@
    year = {2020},
 }
 
-@report{R6GovernmentofCostaRica2018-20222019,
+@TechReport{R6GovernmentofCostaRica2018-20222019,
    author = {Government of Costa Rica 2018-2022},
    city = {San José, Costa Rica.},
    institution = {Ministerio de Ambiente y Energía},
@@ -68,13 +62,13 @@
    year = {2019},
 }
 
-@web_page{R7,
+@Electronic{R7,
    author = {KTH-dESA},
    title = {OSeMOSYS’ documentation},
    url = {https://osemosys.readthedocs.io/en/latest/},
 }
 
-@article{R8Profillidis2018,
+@Article{R8Profillidis2018,
     doi = {10.1016/C2016-0-00793-3},
    journal = {Modeling of Transport Demand: Analyzing, Calculating, and Forecasting Transport Demand},
    month = {1},
@@ -84,13 +78,13 @@
    year = {2018},
 }
 
-@report{R9MINAE2013,
+@TechReport{R9MINAE2013,
    author = {MINAE},
    title = {ENCUESTA DE CONSUMO ENERGÉTICO NACIONAL EN EL SECTOR TRANSPORTE},
    year = {2013},
 }
 
-@report{r10RITEVE2019,
+@TechReport{r10RITEVE2019,
    author = {RITEVE},
    doi = {10.5962/bhl.title.58276},
    title = {Anuario Revisión Técnica Vehicular 2018},
@@ -99,28 +93,28 @@
 }
 
 
-@web_page{R11SEPSE2021,
+@Electronic{R11SEPSE2021,
    author = {SEPSE},
    title = {Balances Energéticos de Costa Rica 2012-2019},
    url = {https://sepse.go.cr/ciena/balances-energeticos/},
    year = {2021},
 }
 
-@web_page{R12,
+@Electronic{R12,
    author = {Banco Central de Costa Rica},
    title = {Producto Interno Bruto por Actividad Económica},
    url = {https://gee.bccr.fi.cr/indicadoreseconomicos/Cuadros/frmVerCatCuadro.aspx?idioma=1&CodCuadro=\%205784},
    urldate = {2021-09-05},
 }
 
-@web_page{R13,
+@Electronic{R13,
    author = {Banco Central de Costa Rica},
    title = {Producto Interno Bruto y Tipo de Cambio de las Cuentas Nacionales},
    url = {https://gee.bccr.fi.cr/indicadoreseconomicos/Cuadros/frmVerCatCuadro.aspx?idioma=1&CodCuadro=\%205790},
    urldate = {2021-09-05},
 }
 
-@report{R14Smith2014,
+@TechReport{R14Smith2014,
    author = {Margatet Smith and John Gonzales},
    institution = {U.S. Department of Energy},
    title = {Costs Associated With Propane Vehicle Fueling Infrastructure},
@@ -129,14 +123,14 @@
    urldate = {2021-11-30},
 }
 
-@Report{R15IRENA2012,
+@TechReport{R15IRENA2012,
   author   = {IRENA},
   title    = {Biomass for power generation},
   url      = {www.irena.org/Publications},
   year     = {2012},
 }
 
-@report{R16,
+@TechReport{R16,
    author = {RECOPE},
    title = {Plan Estratégico 2020-2030},
    url = {https://www.recope.go.cr/wp-content/uploads/2020/12/20191216_-PLAN-ESTRATEGICO_estruct.pdf},
@@ -144,29 +138,29 @@
 }
 
 
-@web_page{R17,
+@Electronic{R17,
    author = {RECOPE},
    title = {Datos Estadísticos Anuales de Importación - RECOPE},
    url = {https://www.recope.go.cr/productos/estadisticas-de-importacion-y-exportacion/},
    urldate = {2021-09-05},
 }
 
-@article{R18TillBunsen2019,
+@Article{R18TillBunsen2019,
    author = {IEA},
    pages = {232},
    title = {Global EV Outlook 2019},
-   url = {www.iea.org/publications/reports/globalevoutlook2019/},
+   url = {www.iea.org/publications/TechReports/globalevoutlook2019/},
    year = {2019},
 }
 
-@web_page{R19,
+@Electronic{R19,
    author = {IMF},
    title = {IMF Primary Commodity Prices},
    url = {https://www.imf.org/en/Research/commodity-prices},
    urldate = {2021-09-24},
 }
 
-@report{R20,
+@TechReport{R20,
    author = {SNC Lavalin},
    title = {Perspectiva sobre el potencial uso del gas natural en Costa Rica},
    url = {https://www.recope.go.cr/wp-content/uploads/2012/09/SNC-Lavalin_Perspectivas_sobre_-uso_-de_-LNGen_CR.pdf},
@@ -174,7 +168,7 @@
    urldate = {2021-11-28},
 }
 
-@web_page{R21,
+@Electronic{R21,
    author = {NREL},
    title = {ATB | NREL},
    url = {https://atb.nrel.gov/},
@@ -194,7 +188,7 @@
   year     = {2019},
 }
 
-@report{R23ICE2019,
+@TechReport{R23ICE2019,
    author = {ICE},
    title = {PLAN DE EXPANSION DE LA GENERACION ELÉCTRICA},
    url = {www.grupoice.com https://www.grupoice.com/wps/wcm/connect/d91d6f4f-6619-4a2f-834f-6f5890eebb64/PLAN+DE+EXPANSION+DE+LA+GENERACION+2018-2034.pdf?MOD=AJPERES&CVID=mIeNZKV},
@@ -202,7 +196,7 @@
    urldate = {2021-09-05},
 }
 
-@article{R24,
+@Article{R24,
    author = {Instituto Costarricense de Electricidad},
    title = {Plan de Expansión de la Generación Eléctrica 2020-2035},
    url = {https://www.grupoice.com/wps/wcm/connect/741c8397-09f0-4109-a444-bed598cb7440/PLAN+DE+EXPANSI\%C3\%93N+DE+LA+GENERACI\%C3\%93N+EL\%C3\%89CTRICA+2020\%E2\%80\%932035_compressed.pdf?MOD=AJPERES&CVID=nJADNyi},
@@ -210,19 +204,19 @@
    urldate = {2021-10-16},
 }
 
-@report{R25,
+@TechReport{R25,
    author = {Escuela de Ingeniería Eléctrica - Universidad de Costa Rica},
    title = {Estudio para la caracterización del consumo energético en el sector industrial},
    year = {2019},
 }
 
-@report{R26,
+@TechReport{R26,
    author = {Escuela de Ingeniería Eléctrica - Universidad de Costa Rica},
    title = {Opciones de descarbonización del consumo energético en el sector industrial},
    year = {2020},
 }
 
-@Report{R27Hall2019,
+@TechReport{R27Hall2019,
   author   = {Dale Hall and Nic Lutsey},
   title    = {Estimating the infrastructure needs and costs for the launch of zero-emission trucks},
   url      = {www.theicct.orgcommunications@theicct.orgACKNOWLEDGEMENTS},
@@ -238,17 +232,17 @@
   year      = {2018},
 }
 
-@report{R29,
+@TechReport{R29,
    author = {Element Energy and Jacobs},
    title = {Industrial Fuel Switching Market Engagement Study},
    url = {https://assets.publishing.service.gov.uk/government/uploads/system/uploads/attachment_data/file/824592/industrial-fuel-switching.pdf},
    year = {2018},
 }
 
-@report{R30Panteia2020,
+@TechReport{R30Panteia2020,
    author = {Panteia},
-   title = {Cost Figures for Freight Transport-final report},
-   url = {https://www.kimnet.nl/binaries/kimnet/documenten/formulieren/2020/05/26/cost-figures-for-freight-transport/Cost+figures+for+freight+transport+-+final+report.pdf},
+   title = {Cost Figures for Freight Transport-final TechReport},
+   url = {https://www.kimnet.nl/binaries/kimnet/documenten/formulieren/2020/05/26/cost-figures-for-freight-transport/Cost+figures+for+freight+transport+-+final+TechReport.pdf},
    year = {2020},
 }
 
@@ -265,7 +259,7 @@
   year      = {2013},
 }
 
-@report{R32INCOFER2020,
+@TechReport{R32INCOFER2020,
    author = {INCOFER and BCIE and IDOM},
    title = {Estudios de Factibilidad Técnica, Económico-Financiera, Ambiental, Social y de vulnerabilidad para la Construcción, Equipamiento, Puesta en marcha, Operación y Mantenimiento, bajo la modalidad de Concesión de Obra con Servicio Público, del Sistema de Tren Rápido de Pasajeros (TRP) de la Gran Área Metropolitana (GAM)},
    year = {2020},
