--- a/docs/Bibliography.bib
+++ b/docs/Bibliography.bib
@@ -1,17 +1,27 @@
 % Encoding: UTF-8
 
-@Article{R1GodinezZamora2020a,
-  author  = {Guido Godinez-Zamora and Luis Victor-Gallardo and Jam Angulo-Paniagua and Eunice Ramos and Mark Howells and Will Usher and Felipe De Leon and Andrea Meza and Jairo Quiros-Tortos},
-  journal = {Energy Strategy Reviews},
-  title   = {Decarbonising the transport and energy sectors: Technical feasibility and socioeconomic impacts in Costa Rica},
-  year    = {2020},
+@Article{R1Godinez-Zamora2020a,
+  author   = {Guido Godínez-Zamora and Luis Victor-Gallardo and Jam Angulo-Paniagua and Eunice Ramos and Mark Howells and Will Usher and Felipe De León and Andrea Meza and Jairo Quirós-Tortós},
+  title    = {Decarbonising the transport and energy sectors: Technical feasibility and socioeconomic impacts in Costa Rica},
+  doi      = {10.1016/j.esr.2020.100573},
+  issn     = {2211467X},
+  volume   = {32},
+  journal  = {Energy Strategy Reviews},
+  year     = {2020},
 }
 
 @Article{R2Howells2011,
-  author  = {Mark Howells and Holger Rogner and Neil Strachan and Charles Heaps and Hillard Huntington and Socrates Kypreos and Alison Hughes and Semida Silveira and Joe DeCarolis and Morgan Bazillian and Alexander Roehrl},
-  journal = {Energy Policy},
-  title   = {OSeMOSYS: The Open Source Energy Modeling System. An introduction to its ethos, structure and development},
-  year    = {2011},
+   author = {Mark Howells and Holger Rogner and Neil Strachan and Charles Heaps and Hillard Huntington and Socrates Kypreos and Alison Hughes and Semida Silveira and Joe DeCarolis and Morgan Bazillian and Alexander Roehrl},
+   doi = {10.1016/j.enpol.2011.06.033},
+   isbn = {0301-4215},
+   issn = {03014215},
+   issue = {10},
+   journal = {Energy Policy},
+   pages = {5850-5870},
+   publisher = {Elsevier},
+   title = {OSeMOSYS: The Open Source Energy Modeling System. An introduction to its ethos, structure and development.},
+   volume = {39},
+   year = {2011},
 }
 
 @Article{R3Ringkjob2018,
@@ -22,17 +32,237 @@
 }
 
 @Article{R4Niet2021,
-  author  = {T. Niet and A. Shivakumar and F. Gardumi and W. Usher and E. Williams and M. Howells},
-  journal = {Energy Strategy Reviews},
-  title   = {Developing a community of practice around an open source energy modelling tool},
-  year    = {2021},
+  author    = {T. Niet and A. Shivakumar and F. Gardumi and W. Usher and E. Williams and M. Howells},
+  title     = {Developing a community of practice around an open source energy modelling tool},
+  doi       = {10.1016/j.esr.2021.100650},
+  issn      = {2211467X},
+  volume    = {35},
+  journal   = {Energy Strategy Reviews},
+  keywords  = {Energy system modelling, Open source software, Outreach, Public policy, Software development},
+  month     = {5},
+  publisher = {Elsevier Ltd},
+  year      = {2021},
 }
 
 @TechReport{R5CBA_2020,
-  author      = {David G Groves and James Syme and Edmundo Molina-Perez and Carlos Calvo and Hernandez Rand and Luis Victor-Gallardo and Guido Godinez-Zamora and Valentina Saavedra-Gomez and Adrien Vogt-Schilb and Inter-american Development Bank},
-  institution = {Interamerican Development Bank},
-  title       = {The Benefits and Costs Of Decarbonizing Costa Rica's Economy: Informing the Implementation of Costa Rica's National Decarbonization Plan under Uncertainty},
-  year        = {2020},
+   author = {David G Groves and James Syme and Edmundo Molina-Pérez and Carlos Calvo and Hernandez Rand and Luis Víctor-Gallardo and Guido Godínez-Zamora and Valentina Saavedra-Gómez and Adrien Vogt-Schilb and Inter-american Development Bank},
+   doi = {http://dx.doi.org/10.18235/0002867},
+   institution = {Interamerican Development Bank},
+   title = {The Benefits and Costs Of Decarbonizing Costa Rica's Economy: Informing the Implementation of Costa Rica's National Decarbonization Plan under Uncertainty},
+   url = {https://publications.iadb.org/en/benefits-and-costs-decarbonizing-costa-ricas-economy-informing-implementation-costa-ricas-national},
+   year = {2020},
 }
 
-@Comment{jabref-meta: databaseType:bibtex;}
+@TechReport{R6GovernmentofCostaRica2018-20222019,
+   author = {Government of Costa Rica 2018-2022},
+   city = {San José, Costa Rica.},
+   institution = {Ministerio de Ambiente y Energía},
+   title = {Plan Nacional de Descarbonización 2018-2050},
+   url = {https://cambioclimatico.go.cr/wp-content/uploads/2019/02/PLAN.pdf},
+   year = {2019},
+}
+
+@Electronic{R7,
+   author = {KTH-dESA},
+   title = {OSeMOSYS’ documentation},
+   url = {https://osemosys.readthedocs.io/en/latest/},
+}
+
+@Article{R8Profillidis2018,
+    doi = {10.1016/C2016-0-00793-3},
+   journal = {Modeling of Transport Demand: Analyzing, Calculating, and Forecasting Transport Demand},
+   month = {1},
+   pages = {1-500},
+   publisher = {Elsevier},
+   title = {Modeling of transport demand: Analyzing, calculating, and forecasting transport demand},
+   year = {2018},
+}
+
+@TechReport{R9MINAE2013,
+   author = {MINAE},
+   title = {ENCUESTA DE CONSUMO ENERGÉTICO NACIONAL EN EL SECTOR TRANSPORTE},
+   year = {2013},
+}
+
+@TechReport{r10RITEVE2019,
+   author = {RITEVE},
+   doi = {10.5962/bhl.title.58276},
+   title = {Anuario Revisión Técnica Vehicular 2018},
+   url = {https://www.rtv.co.cr/wp-content/uploads/AnuarioRiteve2018.pdf},
+   year = {2019},
+}
+
+
+@Electronic{R11SEPSE2021,
+   author = {SEPSE},
+   title = {Balances Energéticos de Costa Rica 2012-2019},
+   url = {https://sepse.go.cr/ciena/balances-energeticos/},
+   year = {2021},
+}
+
+@Electronic{R12,
+   author = {Banco Central de Costa Rica},
+   title = {Producto Interno Bruto por Actividad Económica},
+   url = {https://gee.bccr.fi.cr/indicadoreseconomicos/Cuadros/frmVerCatCuadro.aspx?idioma=1&CodCuadro=\%205784},
+   urldate = {2021-09-05},
+}
+
+@Electronic{R13,
+   author = {Banco Central de Costa Rica},
+   title = {Producto Interno Bruto y Tipo de Cambio de las Cuentas Nacionales},
+   url = {https://gee.bccr.fi.cr/indicadoreseconomicos/Cuadros/frmVerCatCuadro.aspx?idioma=1&CodCuadro=\%205790},
+   urldate = {2021-09-05},
+}
+
+@TechReport{R14Smith2014,
+   author = {Margatet Smith and John Gonzales},
+   institution = {U.S. Department of Energy},
+   title = {Costs Associated With Propane Vehicle Fueling Infrastructure},
+   url = {https://afdc.energy.gov/files/u/publication/propane_costs.pdf},
+   year = {2014},
+   urldate = {2021-11-30},
+}
+
+@TechReport{R15IRENA2012,
+  author   = {IRENA},
+  title    = {Biomass for power generation},
+  url      = {www.irena.org/Publications},
+  year     = {2012},
+}
+
+@TechReport{R16,
+   author = {RECOPE},
+   title = {Plan Estratégico 2020-2030},
+   url = {https://www.recope.go.cr/wp-content/uploads/2020/12/20191216_-PLAN-ESTRATEGICO_estruct.pdf},
+   urldate = {2021-09-05},
+}
+
+
+@Electronic{R17,
+   author = {RECOPE},
+   title = {Datos Estadísticos Anuales de Importación - RECOPE},
+   url = {https://www.recope.go.cr/productos/estadisticas-de-importacion-y-exportacion/},
+   urldate = {2021-09-05},
+}
+
+@Article{R18TillBunsen2019,
+   author = {IEA},
+   pages = {232},
+   title = {Global EV Outlook 2019},
+   url = {www.iea.org/publications/TechReports/globalevoutlook2019/},
+   year = {2019},
+}
+
+@Electronic{R19,
+   author = {IMF},
+   title = {IMF Primary Commodity Prices},
+   url = {https://www.imf.org/en/Research/commodity-prices},
+   urldate = {2021-09-24},
+}
+
+@TechReport{R20,
+   author = {SNC Lavalin},
+   title = {Perspectiva sobre el potencial uso del gas natural en Costa Rica},
+   url = {https://www.recope.go.cr/wp-content/uploads/2012/09/SNC-Lavalin_Perspectivas_sobre_-uso_-de_-LNGen_CR.pdf},
+   year = {2012},
+   urldate = {2021-11-28},
+}
+
+@Electronic{R21,
+   author = {NREL},
+   title = {ATB | NREL},
+   url = {https://atb.nrel.gov/},
+   urldate = {2021-09-24},
+}
+
+@Book{R22IRENA2019,
+  author   = {IRENA},
+  title    = {Renewable Power Generation Costs in 2018},
+  doi      = {10.1007/SpringerReference_7300},
+  isbn     = {978-92-9260-040-2},
+  pages    = {160},
+  issn     = {1476-4687},
+  journal  = {International Renewable Energy Agency},
+  keywords = {CSP, IRENA, IRENA publication, LCOE, bioenergy, biomass, capacity factor, cost of capital, costs, geothermal, hydropower, investment costs, offshore wind, onshore wind, operation and maintenance, power generation, renewable energy, solar PV},
+  pmid     = {25246403},
+  year     = {2019},
+}
+
+@TechReport{R23ICE2019,
+   author = {ICE},
+   title = {PLAN DE EXPANSION DE LA GENERACION ELÉCTRICA},
+   url = {www.grupoice.com https://www.grupoice.com/wps/wcm/connect/d91d6f4f-6619-4a2f-834f-6f5890eebb64/PLAN+DE+EXPANSION+DE+LA+GENERACION+2018-2034.pdf?MOD=AJPERES&CVID=mIeNZKV},
+   year = {2019},
+   urldate = {2021-09-05},
+}
+
+@Article{R24,
+   author = {Instituto Costarricense de Electricidad},
+   title = {Plan de Expansión de la Generación Eléctrica 2020-2035},
+   url = {https://www.grupoice.com/wps/wcm/connect/741c8397-09f0-4109-a444-bed598cb7440/PLAN+DE+EXPANSI\%C3\%93N+DE+LA+GENERACI\%C3\%93N+EL\%C3\%89CTRICA+2020\%E2\%80\%932035_compressed.pdf?MOD=AJPERES&CVID=nJADNyi},
+   year = {2020},
+   urldate = {2021-10-16},
+}
+
+@TechReport{R25,
+   author = {Escuela de Ingeniería Eléctrica - Universidad de Costa Rica},
+   title = {Estudio para la caracterización del consumo energético en el sector industrial},
+   year = {2019},
+}
+
+@TechReport{R26,
+   author = {Escuela de Ingeniería Eléctrica - Universidad de Costa Rica},
+   title = {Opciones de descarbonización del consumo energético en el sector industrial},
+   year = {2020},
+}
+
+@TechReport{R27Hall2019,
+  author   = {Dale Hall and Nic Lutsey},
+  title    = {Estimating the infrastructure needs and costs for the launch of zero-emission trucks},
+  url      = {www.theicct.orgcommunications@theicct.orgACKNOWLEDGEMENTS},
+  year     = {2019},
+}
+
+@Book{R28Taibi2018,
+  author    = {Emanuele Taibi and Raul Miranda and Wouter Vanhoudt and Thomas Winkel and Jean-Christophe Lanoix and Frederic Barth},
+  title     = {Hydrogen from renewable power: Technology outlook for the energy transition},
+  isbn      = {978-92-9260-077-8},
+  publisher = {IRENA},
+  url       = {www.irena.org},
+  year      = {2018},
+}
+
+@TechReport{R29,
+   author = {Element Energy and Jacobs},
+   title = {Industrial Fuel Switching Market Engagement Study},
+   url = {https://assets.publishing.service.gov.uk/government/uploads/system/uploads/attachment_data/file/824592/industrial-fuel-switching.pdf},
+   year = {2018},
+}
+
+@TechReport{R30Panteia2020,
+   author = {Panteia},
+   title = {Cost Figures for Freight Transport-final TechReport},
+   url = {https://www.kimnet.nl/binaries/kimnet/documenten/formulieren/2020/05/26/cost-figures-for-freight-transport/Cost+figures+for+freight+transport+-+final+TechReport.pdf},
+   year = {2020},
+}
+
+@Article{R31,
+  author    = {A. García-Álvarez and P. J. Pérez-Martínez and I. González-Franco},
+  title     = {Energy Consumption and Carbon Dioxide Emissions in Rail and Road Freight Transport in Spain: A Case Study of Car Carriers and Bulk Petrochemicals},
+  doi       = {10.1080/15472450.2012.719456},
+  issue     = {3},
+  pages     = {233-244},
+  url       = {https://www.tandfonline.com/doi/abs/10.1080/15472450.2012.719456},
+  volume    = {17},
+  journal   = {http://dx.doi.org/10.1080/15472450.2012.719456},
+  publisher = {Taylor & Francis Group},
+  year      = {2013},
+}
+
+@TechReport{R32INCOFER2020,
+   author = {INCOFER and BCIE and IDOM},
+   title = {Estudios de Factibilidad Técnica, Económico-Financiera, Ambiental, Social y de vulnerabilidad para la Construcción, Equipamiento, Puesta en marcha, Operación y Mantenimiento, bajo la modalidad de Concesión de Obra con Servicio Público, del Sistema de Tren Rápido de Pasajeros (TRP) de la Gran Área Metropolitana (GAM)},
+   year = {2020},
+}
+
+@Comment{jabref-meta: databaseType:biblatex;}
