--- a/docs/Bibliography.bib
+++ b/docs/Bibliography.bib
@@ -69,13 +69,14 @@
 }
 
 @Article{R8Profillidis2018,
-    doi = {10.1016/C2016-0-00793-3},
+   doi = {10.1016/C2016-0-00793-3},
    journal = {Modeling of Transport Demand: Analyzing, Calculating, and Forecasting Transport Demand},
    month = {1},
    pages = {1-500},
    publisher = {Elsevier},
    title = {Modeling of transport demand: Analyzing, calculating, and forecasting transport demand},
    year = {2018},
+   author  = {V.A. Profillidis and G.N. Botzoris},
 }
 
 @TechReport{R9MINAE2013,
@@ -88,7 +89,7 @@
    author = {RITEVE},
    doi = {10.5962/bhl.title.58276},
    title = {Anuario Revisión Técnica Vehicular 2018},
-   url = {https://www.rtv.co.cr/wp-content/uploads/AnuarioRiteve2018.pdf},
+   institution = {Riteve},
    year = {2019},
 }
 
@@ -104,37 +105,32 @@
    author = {Banco Central de Costa Rica},
    title = {Producto Interno Bruto por Actividad Económica},
    url = {https://gee.bccr.fi.cr/indicadoreseconomicos/Cuadros/frmVerCatCuadro.aspx?idioma=1&CodCuadro=\%205784},
-   urldate = {2021-09-05},
 }
 
 @Electronic{R13,
    author = {Banco Central de Costa Rica},
    title = {Producto Interno Bruto y Tipo de Cambio de las Cuentas Nacionales},
    url = {https://gee.bccr.fi.cr/indicadoreseconomicos/Cuadros/frmVerCatCuadro.aspx?idioma=1&CodCuadro=\%205790},
-   urldate = {2021-09-05},
 }
 
 @TechReport{R14Smith2014,
    author = {Margatet Smith and John Gonzales},
    institution = {U.S. Department of Energy},
    title = {Costs Associated With Propane Vehicle Fueling Infrastructure},
-   url = {https://afdc.energy.gov/files/u/publication/propane_costs.pdf},
    year = {2014},
-   urldate = {2021-11-30},
 }
 
 @TechReport{R15IRENA2012,
   author   = {IRENA},
   title    = {Biomass for power generation},
-  url      = {www.irena.org/Publications},
+  institution = {International Renewable Energy Agency},
   year     = {2012},
 }
 
-@TechReport{R16,
+@Electronic{R16,
    author = {RECOPE},
    title = {Plan Estratégico 2020-2030},
-   url = {https://www.recope.go.cr/wp-content/uploads/2020/12/20191216_-PLAN-ESTRATEGICO_estruct.pdf},
-   urldate = {2021-09-05},
+   url = {https://www.recope.go.cr/wp-content/uploads/2020/12/20191216_-PLAN-ESTRATEGICO_estruct.pdf
 }
 
 
@@ -142,14 +138,12 @@
    author = {RECOPE},
    title = {Datos Estadísticos Anuales de Importación - RECOPE},
    url = {https://www.recope.go.cr/productos/estadisticas-de-importacion-y-exportacion/},
-   urldate = {2021-09-05},
 }
 
 @Article{R18TillBunsen2019,
    author = {IEA},
-   pages = {232},
    title = {Global EV Outlook 2019},
-   url = {www.iea.org/publications/TechReports/globalevoutlook2019/},
+   journal = {IEA, Paris}
    year = {2019},
 }
 
@@ -157,66 +151,57 @@
    author = {IMF},
    title = {IMF Primary Commodity Prices},
    url = {https://www.imf.org/en/Research/commodity-prices},
-   urldate = {2021-09-24},
 }
 
-@TechReport{R20,
+@Electronic{R20,
    author = {SNC Lavalin},
    title = {Perspectiva sobre el potencial uso del gas natural en Costa Rica},
    url = {https://www.recope.go.cr/wp-content/uploads/2012/09/SNC-Lavalin_Perspectivas_sobre_-uso_-de_-LNGen_CR.pdf},
    year = {2012},
-   urldate = {2021-11-28},
 }
 
 @Electronic{R21,
    author = {NREL},
    title = {ATB | NREL},
-   url = {https://atb.nrel.gov/},
-   urldate = {2021-09-24},
+   url = {https://atb.nrel.gov/}
 }
 
-@Book{R22IRENA2019,
+@TechReport{R22IRENA2019,
   author   = {IRENA},
   title    = {Renewable Power Generation Costs in 2018},
-  doi      = {10.1007/SpringerReference_7300},
-  isbn     = {978-92-9260-040-2},
-  pages    = {160},
-  issn     = {1476-4687},
-  journal  = {International Renewable Energy Agency},
-  keywords = {CSP, IRENA, IRENA publication, LCOE, bioenergy, biomass, capacity factor, cost of capital, costs, geothermal, hydropower, investment costs, offshore wind, onshore wind, operation and maintenance, power generation, renewable energy, solar PV},
-  pmid     = {25246403},
+  institution  = {International Renewable Energy Agency},
   year     = {2019},
 }
 
-@TechReport{R23ICE2019,
+@Electronic{R23ICE2019,
    author = {ICE},
    title = {PLAN DE EXPANSION DE LA GENERACION ELÉCTRICA},
-   url = {www.grupoice.com https://www.grupoice.com/wps/wcm/connect/d91d6f4f-6619-4a2f-834f-6f5890eebb64/PLAN+DE+EXPANSION+DE+LA+GENERACION+2018-2034.pdf?MOD=AJPERES&CVID=mIeNZKV},
+   url = {https://www.grupoice.com/wps/wcm/connect/d91d6f4f-6619-4a2f-834f-6f5890eebb64/PLAN+DE+EXPANSION+DE+LA+GENERACION+2018-2034.pdf?MOD=AJPERES&CVID=mIeNZKV},
    year = {2019},
-   urldate = {2021-09-05},
 }
 
-@Article{R24,
+@Electronic{R24,
    author = {Instituto Costarricense de Electricidad},
    title = {Plan de Expansión de la Generación Eléctrica 2020-2035},
    url = {https://www.grupoice.com/wps/wcm/connect/741c8397-09f0-4109-a444-bed598cb7440/PLAN+DE+EXPANSI\%C3\%93N+DE+LA+GENERACI\%C3\%93N+EL\%C3\%89CTRICA+2020\%E2\%80\%932035_compressed.pdf?MOD=AJPERES&CVID=nJADNyi},
    year = {2020},
-   urldate = {2021-10-16},
 }
 
 @TechReport{R25,
    author = {Escuela de Ingeniería Eléctrica - Universidad de Costa Rica},
    title = {Estudio para la caracterización del consumo energético en el sector industrial},
+   institution  = {Escuela de Ingeniería Eléctrica - Universidad de Costa Rica}
    year = {2019},
 }
 
 @TechReport{R26,
    author = {Escuela de Ingeniería Eléctrica - Universidad de Costa Rica},
+   institution  = {Escuela de Ingeniería Eléctrica - Universidad de Costa Rica}
    title = {Opciones de descarbonización del consumo energético en el sector industrial},
    year = {2020},
 }
 
-@TechReport{R27Hall2019,
+@Electronic{R27Hall2019,
   author   = {Dale Hall and Nic Lutsey},
   title    = {Estimating the infrastructure needs and costs for the launch of zero-emission trucks},
   url      = {www.theicct.orgcommunications@theicct.orgACKNOWLEDGEMENTS},
@@ -226,20 +211,18 @@
 @Book{R28Taibi2018,
   author    = {Emanuele Taibi and Raul Miranda and Wouter Vanhoudt and Thomas Winkel and Jean-Christophe Lanoix and Frederic Barth},
   title     = {Hydrogen from renewable power: Technology outlook for the energy transition},
-  isbn      = {978-92-9260-077-8},
-  publisher = {IRENA},
-  url       = {www.irena.org},
+  institution = {IRENA},
   year      = {2018},
 }
 
-@TechReport{R29,
+@Electronic{R29,
    author = {Element Energy and Jacobs},
    title = {Industrial Fuel Switching Market Engagement Study},
    url = {https://assets.publishing.service.gov.uk/government/uploads/system/uploads/attachment_data/file/824592/industrial-fuel-switching.pdf},
    year = {2018},
 }
 
-@TechReport{R30Panteia2020,
+@Electronic{R30Panteia2020,
    author = {Panteia},
    title = {Cost Figures for Freight Transport-final TechReport},
    url = {https://www.kimnet.nl/binaries/kimnet/documenten/formulieren/2020/05/26/cost-figures-for-freight-transport/Cost+figures+for+freight+transport+-+final+TechReport.pdf},
@@ -249,18 +232,13 @@
 @Article{R31,
   author    = {A. García-Álvarez and P. J. Pérez-Martínez and I. González-Franco},
   title     = {Energy Consumption and Carbon Dioxide Emissions in Rail and Road Freight Transport in Spain: A Case Study of Car Carriers and Bulk Petrochemicals},
-  doi       = {10.1080/15472450.2012.719456},
-  issue     = {3},
-  pages     = {233-244},
-  url       = {https://www.tandfonline.com/doi/abs/10.1080/15472450.2012.719456},
-  volume    = {17},
-  journal   = {http://dx.doi.org/10.1080/15472450.2012.719456},
-  publisher = {Taylor & Francis Group},
+  journal   = {Taylor & Francis Group},
   year      = {2013},
 }
 
 @TechReport{R32INCOFER2020,
    author = {INCOFER and BCIE and IDOM},
+   institution  = {INCOFER and BCIE and IDOM}
    title = {Estudios de Factibilidad Técnica, Económico-Financiera, Ambiental, Social y de vulnerabilidad para la Construcción, Equipamiento, Puesta en marcha, Operación y Mantenimiento, bajo la modalidad de Concesión de Obra con Servicio Público, del Sistema de Tren Rápido de Pasajeros (TRP) de la Gran Área Metropolitana (GAM)},
    year = {2020},
 }
