Corrigiendo peque;o error referencias

--- a/docs/Bibliography.bib
+++ b/docs/Bibliography.bib
@@ -130,7 +130,7 @@
 @Electronic{R16,
    author = {RECOPE},
    title = {Plan Estratégico 2020-2030},
-   url = {https://www.recope.go.cr/wp-content/uploads/2020/12/20191216_-PLAN-ESTRATEGICO_estruct.pdf
+   url = {https://www.recope.go.cr/wp-content/uploads/2020/12/20191216_-PLAN-ESTRATEGICO_estruct.pdf},
 }
 
 
