--- a/Bibliography2.bib
+++ b/Bibliography2.bib
@@ -43,7 +43,7 @@
 }
 
 @TechReport{R6GovernmentofCostaRica2018-20222019,
-  author      = {Government of Costa Rica 2018-2022},
+  author      = {{Government of Costa Rica 2018-2022}},
   institution = {Ministerio de Ambiente y Energía},
   title       = {Plan Nacional de Descarbonización 2018-2050},
   year        = {2019},
@@ -74,6 +74,34 @@
   title       = {Anuario Revisión Técnica Vehicular 2018},
   year        = {2019},
   journal     = {Riteve},
+}
+
+@Electronic{R12,
+  author = {{Banco Central de Costa Rica}},
+  title  = {Producto Interno Bruto por Actividad Económica},
+  url    = {https://gee.bccr.fi.cr/indicadoreseconomicos/Cuadros/frmVerCatCuadro.aspx?idioma=1&CodCuadro=\ 5784},
+  year   = {2021},
+}
+
+@Electronic{R13,
+  author = {{Banco Central de Costa Rica}},
+  title  = {Producto Interno Bruto y Tipo de Cambio de las Cuentas Nacionales},
+  url    = {https://gee.bccr.fi.cr/indicadoreseconomicos/Cuadros/frmVerCatCuadro.aspx?idioma=1&CodCuadro=\ 5790},
+  year   = {2021},
+}
+
+@TechReport{R14Smith2014,
+  author      = {Margatet Smith and John Gonzales},
+  institution = {U.S. Department of Energy},
+  title       = {Costs Associated With Propane Vehicle Fueling Infrastructure},
+  year        = {2014},
+}
+
+@TechReport{R15IRENA2012,
+  author      = {IRENA},
+  institution = {International Renewable Energy Agency},
+  title       = {Biomass for power generation},
+  year        = {2012},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
