--- a/Bibliography2.bib
+++ b/Bibliography2.bib
@@ -104,4 +104,36 @@
   year        = {2012},
 }
 
+@Electronic{R16,
+  author = {RECOPE},
+  title  = {Plan Estratégico 2020-2030},
+  url    = {https://www.recope.go.cr/wp-content/uploads/2020/12/20191216_-PLAN-ESTRATEGICO_estruct.pdf},
+}
+
+@Electronic{R17,
+  author = {RECOPE},
+  title  = {Datos Estadísticos Anuales de Importación - RECOPE},
+  url    = {https://www.recope.go.cr/productos/estadisticas-de-importacion-y-exportacion/},
+}
+
+@Article{R18TillBunsen2019,
+  author  = {IEA},
+  journal = {IEA, Paris},
+  title   = {Global EV Outlook 2019},
+  year    = {2019},
+}
+
+@Electronic{R19,
+  author = {IMF},
+  title  = {IMF Primary Commodity Prices},
+  url    = {https://www.imf.org/en/Research/commodity-prices},
+}
+
+@Electronic{R20,
+  author = {SNC Lavalin},
+  title  = {Perspectiva sobre el potencial uso del gas natural en Costa Rica},
+  url    = {https://www.recope.go.cr/wp-content/uploads/2012/09/SNC-Lavalin_Perspectivas_sobre_-uso_-de_-LNGen_CR.pdf},
+  year   = {2012},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
