--- a/docs/Bibliography.bib
+++ b/docs/Bibliography.bib
@@ -1,27 +1,17 @@
 % Encoding: UTF-8
 
-@Article{R1Godinez-Zamora2020a,
-  author   = {Guido Godínez-Zamora and Luis Victor-Gallardo and Jam Angulo-Paniagua and Eunice Ramos and Mark Howells and Will Usher and Felipe De León and Andrea Meza and Jairo Quirós-Tortós},
-  title    = {Decarbonising the transport and energy sectors: Technical feasibility and socioeconomic impacts in Costa Rica},
-  doi      = {10.1016/j.esr.2020.100573},
-  issn     = {2211467X},
-  volume   = {32},
-  journal  = {Energy Strategy Reviews},
-  year     = {2020},
+@Article{R1GodinezZamora2020a,
+  author  = {Guido Godinez-Zamora and Luis Victor-Gallardo and Jam Angulo-Paniagua and Eunice Ramos and Mark Howells and Will Usher and Felipe De Leon and Andrea Meza and Jairo Quiros-Tortos},
+  journal = {Energy Strategy Reviews},
+  title   = {Decarbonising the transport and energy sectors: Technical feasibility and socioeconomic impacts in Costa Rica},
+  year    = {2020},
 }
 
 @Article{R2Howells2011,
-   author = {Mark Howells and Holger Rogner and Neil Strachan and Charles Heaps and Hillard Huntington and Socrates Kypreos and Alison Hughes and Semida Silveira and Joe DeCarolis and Morgan Bazillian and Alexander Roehrl},
-   doi = {10.1016/j.enpol.2011.06.033},
-   isbn = {0301-4215},
-   issn = {03014215},
-   issue = {10},
-   journal = {Energy Policy},
-   pages = {5850-5870},
-   publisher = {Elsevier},
-   title = {OSeMOSYS: The Open Source Energy Modeling System. An introduction to its ethos, structure and development.},
-   volume = {39},
-   year = {2011},
+  author  = {Mark Howells and Holger Rogner and Neil Strachan and Charles Heaps and Hillard Huntington and Socrates Kypreos and Alison Hughes and Semida Silveira and Joe DeCarolis and Morgan Bazillian and Alexander Roehrl},
+  journal = {Energy Policy},
+  title   = {OSeMOSYS: The Open Source Energy Modeling System. An introduction to its ethos, structure and development},
+  year    = {2011},
 }
 
 @Article{R3Ringkjob2018,
@@ -32,132 +22,118 @@
 }
 
 @Article{R4Niet2021,
-  author    = {T. Niet and A. Shivakumar and F. Gardumi and W. Usher and E. Williams and M. Howells},
-  title     = {Developing a community of practice around an open source energy modelling tool},
-  doi       = {10.1016/j.esr.2021.100650},
-  issn      = {2211467X},
-  volume    = {35},
-  journal   = {Energy Strategy Reviews},
-  keywords  = {Energy system modelling, Open source software, Outreach, Public policy, Software development},
-  month     = {5},
-  publisher = {Elsevier Ltd},
-  year      = {2021},
+  author  = {T. Niet and A. Shivakumar and F. Gardumi and W. Usher and E. Williams and M. Howells},
+  journal = {Energy Strategy Reviews},
+  title   = {Developing a community of practice around an open source energy modelling tool},
+  year    = {2021},
 }
 
 @TechReport{R5CBA_2020,
-   author = {David G Groves and James Syme and Edmundo Molina-Pérez and Carlos Calvo and Hernandez Rand and Luis Víctor-Gallardo and Guido Godínez-Zamora and Valentina Saavedra-Gómez and Adrien Vogt-Schilb and Inter-american Development Bank},
-   doi = {http://dx.doi.org/10.18235/0002867},
-   institution = {Interamerican Development Bank},
-   title = {The Benefits and Costs Of Decarbonizing Costa Rica's Economy: Informing the Implementation of Costa Rica's National Decarbonization Plan under Uncertainty},
-   url = {https://publications.iadb.org/en/benefits-and-costs-decarbonizing-costa-ricas-economy-informing-implementation-costa-ricas-national},
-   year = {2020},
+  author      = {David G Groves and James Syme and Edmundo Molina-Perez and Carlos Calvo and Hernandez Rand and Luis Victor-Gallardo and Guido Godinez-Zamora and Valentina Saavedra-Gomez and Adrien Vogt-Schilb and Inter-american Development Bank},
+  institution = {Interamerican Development Bank},
+  title       = {The Benefits and Costs Of Decarbonizing Costa Rica's Economy: Informing the Implementation of Costa Rica's National Decarbonization Plan under Uncertainty},
+  year        = {2020},
+}
+
+@Electronic{R11SEPSE2021,
+  author = {SEPSE},
+  title  = {Balances Energéticos de Costa Rica 2012-2019},
+  url    = {https://sepse.go.cr/ciena/balances-energeticos/},
+  year   = {2021},
 }
 
 @TechReport{R6GovernmentofCostaRica2018-20222019,
-   author = {Government of Costa Rica 2018-2022},
-   city = {San José, Costa Rica.},
-   institution = {Ministerio de Ambiente y Energía},
-   title = {Plan Nacional de Descarbonización 2018-2050},
-   url = {https://cambioclimatico.go.cr/wp-content/uploads/2019/02/PLAN.pdf},
-   year = {2019},
+  author      = {{Government of Costa Rica 2018-2022}},
+  institution = {Ministerio de Ambiente y Energía},
+  title       = {Plan Nacional de Descarbonización 2018-2050},
+  year        = {2019},
 }
 
 @Electronic{R7,
-   author = {KTH-dESA},
-   title = {OSeMOSYS’ documentation},
-   url = {https://osemosys.readthedocs.io/en/latest/},
+  author = {KTH-dESA},
+  title  = {OSeMOSYS’ documentation},
+  url    = {https://osemosys.readthedocs.io/en/latest/},
 }
 
 @Article{R8Profillidis2018,
-   doi = {10.1016/C2016-0-00793-3},
-   journal = {Modeling of Transport Demand: Analyzing, Calculating, and Forecasting Transport Demand},
-   month = {1},
-   pages = {1-500},
-   publisher = {Elsevier},
-   title = {Modeling of transport demand: Analyzing, calculating, and forecasting transport demand},
-   year = {2018},
-   author  = {V.A. Profillidis and G.N. Botzoris},
+  author  = {V.A. Profillidis and G.N. Botzoris},
+  journal = {Modeling of Transport Demand: Analyzing, Calculating, and Forecasting Transport Demand},
+  title   = {Modeling of transport demand: Analyzing, calculating, and forecasting transport demand},
+  year    = {2018},
 }
 
-@TechReport{R9MINAE2013,
-   author = {MINAE},
-   title = {ENCUESTA DE CONSUMO ENERGÉTICO NACIONAL EN EL SECTOR TRANSPORTE},
-   year = {2013},
+@Electronic{R9MINAE2013,
+  author = {MINAE},
+  title  = {ENCUESTA DE CONSUMO ENERGÉTICO NACIONAL EN EL SECTOR TRANSPORTE},
+  year   = {2013},
 }
 
 @TechReport{r10RITEVE2019,
-   author = {RITEVE},
-   doi = {10.5962/bhl.title.58276},
-   title = {Anuario Revisión Técnica Vehicular 2018},
-   institution = {Riteve},
-   year = {2019},
-}
-
-
-@Electronic{R11SEPSE2021,
-   author = {SEPSE},
-   title = {Balances Energéticos de Costa Rica 2012-2019},
-   url = {https://sepse.go.cr/ciena/balances-energeticos/},
-   year = {2021},
+  author      = {RITEVE},
+  institution = {Riteve},
+  title       = {Anuario Revisión Técnica Vehicular 2018},
+  year        = {2019},
+  journal     = {Riteve},
 }
 
 @Electronic{R12,
-   author = {Banco Central de Costa Rica},
-   title = {Producto Interno Bruto por Actividad Económica},
-   url = {https://gee.bccr.fi.cr/indicadoreseconomicos/Cuadros/frmVerCatCuadro.aspx?idioma=1&CodCuadro=\%205784},
+  author = {{Banco Central de Costa Rica}},
+  title  = {Producto Interno Bruto por Actividad Económica},
+  url    = {https://gee.bccr.fi.cr/indicadoreseconomicos/Cuadros/frmVerCatCuadro.aspx?idioma=1&CodCuadro=\ 5784},
+  year   = {2021},
 }
 
 @Electronic{R13,
-   author = {Banco Central de Costa Rica},
-   title = {Producto Interno Bruto y Tipo de Cambio de las Cuentas Nacionales},
-   url = {https://gee.bccr.fi.cr/indicadoreseconomicos/Cuadros/frmVerCatCuadro.aspx?idioma=1&CodCuadro=\%205790},
+  author = {{Banco Central de Costa Rica}},
+  title  = {Producto Interno Bruto y Tipo de Cambio de las Cuentas Nacionales},
+  url    = {https://gee.bccr.fi.cr/indicadoreseconomicos/Cuadros/frmVerCatCuadro.aspx?idioma=1&CodCuadro=\ 5790},
+  year   = {2021},
 }
 
 @TechReport{R14Smith2014,
-   author = {Margatet Smith and John Gonzales},
-   institution = {U.S. Department of Energy},
-   title = {Costs Associated With Propane Vehicle Fueling Infrastructure},
-   year = {2014},
+  author      = {Margatet Smith and John Gonzales},
+  institution = {U.S. Department of Energy},
+  title       = {Costs Associated With Propane Vehicle Fueling Infrastructure},
+  year        = {2014},
 }
 
 @TechReport{R15IRENA2012,
-  author   = {IRENA},
-  title    = {Biomass for power generation},
+  author      = {IRENA},
   institution = {International Renewable Energy Agency},
-  year     = {2012},
+  title       = {Biomass for power generation},
+  year        = {2012},
 }
 
 @Electronic{R16,
-   author = {RECOPE},
-   title = {Plan Estratégico 2020-2030},
-   url = {https://www.recope.go.cr/wp-content/uploads/2020/12/20191216_-PLAN-ESTRATEGICO_estruct.pdf},
+  author = {RECOPE},
+  title  = {Plan Estratégico 2020-2030},
+  url    = {https://www.recope.go.cr/wp-content/uploads/2020/12/20191216_-PLAN-ESTRATEGICO_estruct.pdf},
 }
 
-
 @Electronic{R17,
-   author = {RECOPE},
-   title = {Datos Estadísticos Anuales de Importación - RECOPE},
-   url = {https://www.recope.go.cr/productos/estadisticas-de-importacion-y-exportacion/},
+  author = {RECOPE},
+  title  = {Datos Estadísticos Anuales de Importación - RECOPE},
+  url    = {https://www.recope.go.cr/productos/estadisticas-de-importacion-y-exportacion/},
 }
 
 @Article{R18TillBunsen2019,
-   author = {IEA},
-   title = {Global EV Outlook 2019},
-   journal = {IEA, Paris}
-   year = {2019},
+  author  = {IEA},
+  journal = {IEA, Paris},
+  title   = {Global EV Outlook 2019},
+  year    = {2019},
 }
 
 @Electronic{R19,
-   author = {IMF},
-   title = {IMF Primary Commodity Prices},
-   url = {https://www.imf.org/en/Research/commodity-prices},
+  author = {IMF},
+  title  = {IMF Primary Commodity Prices},
+  url    = {https://www.imf.org/en/Research/commodity-prices},
 }
 
 @Electronic{R20,
-   author = {SNC Lavalin},
-   title = {Perspectiva sobre el potencial uso del gas natural en Costa Rica},
-   url = {https://www.recope.go.cr/wp-content/uploads/2012/09/SNC-Lavalin_Perspectivas_sobre_-uso_-de_-LNGen_CR.pdf},
-   year = {2012},
+  author = {SNC Lavalin},
+  title  = {Perspectiva sobre el potencial uso del gas natural en Costa Rica},
+  url    = {https://www.recope.go.cr/wp-content/uploads/2012/09/SNC-Lavalin_Perspectivas_sobre_-uso_-de_-LNGen_CR.pdf},
+  year   = {2012},
 }
 
 @Electronic{R21,
