Corrigiendo peque;o error referencias

--- a/docs/Bibliography.bib
+++ b/docs/Bibliography.bib
@@ -166,13 +166,13 @@
 @TechReport{R25,
    author = {Escuela de Ingeniería Eléctrica - Universidad de Costa Rica},
    title = {Estudio para la caracterización del consumo energético en el sector industrial},
-   institution  = {Escuela de Ingeniería Eléctrica - Universidad de Costa Rica}
+   institution  = {Escuela de Ingeniería Eléctrica - Universidad de Costa Rica},
    year = {2019},
 }
 
 @TechReport{R26,
    author = {Escuela de Ingeniería Eléctrica - Universidad de Costa Rica},
-   institution  = {Escuela de Ingeniería Eléctrica - Universidad de Costa Rica}
+   institution  = {Escuela de Ingeniería Eléctrica - Universidad de Costa Rica},
    title = {Opciones de descarbonización del consumo energético en el sector industrial},
    year = {2020},
 }
@@ -214,7 +214,7 @@
 
 @TechReport{R32INCOFER2020,
    author = {INCOFER and BCIE and IDOM},
-   institution  = {INCOFER and BCIE and IDOM}
+   institution  = {INCOFER and BCIE and IDOM},
    title = {Estudios de Factibilidad Técnica, Económico-Financiera, Ambiental, Social y de vulnerabilidad para la Construcción, Equipamiento, Puesta en marcha, Operación y Mantenimiento, bajo la modalidad de Concesión de Obra con Servicio Público, del Sistema de Tren Rápido de Pasajeros (TRP) de la Gran Área Metropolitana (GAM)},
    year = {2020},
 }
