Prueba para referencias electronicas

--- a/docs/Bibliography.bib
+++ b/docs/Bibliography.bib
@@ -42,8 +42,8 @@
   year        = {2019},
 }
 
-@Electronic{R9MINAE2013,
-  author = {MINAE},
-  title  = {ENCUESTA DE CONSUMO ENERGÉTICO NACIONAL EN EL SECTOR TRANSPORTE},
-  year   = {2013},
+@Misc{R7,
+  author       = {KTH-dESA},
+  howpublished = {\url{https://osemosys.readthedocs.io/en/latest/}},
+  title        = {OSeMOSYS’ documentation},
 }
