Prueba para referencias electronicas

--- a/docs/Bibliography.bib
+++ b/docs/Bibliography.bib
@@ -47,3 +47,16 @@
   howpublished = {\url{https://osemosys.readthedocs.io/en/latest/}},
   title        = {OSeMOSYS’ documentation},
 }
+
+@Article{R8Profillidis2018,
+  author  = {V.A. Profillidis and G.N. Botzoris},
+  journal = {Modeling of Transport Demand: Analyzing, Calculating, and Forecasting Transport Demand},
+  title   = {Modeling of transport demand: Analyzing, calculating, and forecasting transport demand},
+  year    = {2018},
+}
+
+@Misc{R9MINAE2013,
+  author = {MINAE},
+  title  = {ENCUESTA DE CONSUMO ENERGÉTICO NACIONAL EN EL SECTOR TRANSPORTE},
+  year   = {2013},
+}
