Cambiando electronic por Misc

--- a/docs/Bibliography.bib
+++ b/docs/Bibliography.bib
@@ -60,3 +60,18 @@
   title  = {ENCUESTA DE CONSUMO ENERGÉTICO NACIONAL EN EL SECTOR TRANSPORTE},
   year   = {2013},
 }
+
+@TechReport{r10RITEVE2019,
+  author      = {RITEVE},
+  institution = {Riteve},
+  title       = {Anuario Revisión Técnica Vehicular 2018},
+  year        = {2019},
+  journal     = {Riteve},
+}
+
+@Misc{R11SEPSE2021,
+  author       = {SEPSE},
+  howpublished = {\url{https://sepse.go.cr/ciena/balances-energeticos/}},
+  title        = {Balances Energéticos de Costa Rica 2012-2019},
+  year         = {2021},
+}
