--- a/Bibliography2.bib
+++ b/Bibliography2.bib
@@ -76,6 +76,13 @@
   journal     = {Riteve},
 }
 
+@Misc{R11SEPSE2021,
+  author       = {SEPSE},
+  howpublished = {\url{https://sepse.go.cr/ciena/balances-energeticos/}},
+  title        = {Balances Energéticos de Costa Rica 2012-2019},
+  year         = {2021},
+}
+
 @Electronic{R12,
   author = {{Banco Central de Costa Rica}},
   title  = {Producto Interno Bruto por Actividad Económica},
