--- a/docs/Bibliography.bib
+++ b/docs/Bibliography.bib
@@ -75,3 +75,148 @@
   title        = {Balances Energéticos de Costa Rica 2012-2019},
   year         = {2021},
 }
+
+@Misc{R12,
+  author = {{Banco Central de Costa Rica}},
+  title  = {Producto Interno Bruto por Actividad Económica},
+  howpublished = {\url{https://gee.bccr.fi.cr/indicadoreseconomicos/Cuadros/frmVerCatCuadro.aspx?idioma=1&CodCuadro=\5784}},
+  year   = {2021},
+}
+
+@Misc{R13,
+  author = {{Banco Central de Costa Rica}},
+  title  = {Producto Interno Bruto y Tipo de Cambio de las Cuentas Nacionales},
+  howpublished = {\url{https://gee.bccr.fi.cr/indicadoreseconomicos/Cuadros/frmVerCatCuadro.aspx?idioma=1&CodCuadro=\5790}},
+  year   = {2021},
+}
+
+@TechReport{R14Smith2014,
+  author      = {Margatet Smith and John Gonzales},
+  institution = {U.S. Department of Energy},
+  title       = {Costs Associated With Propane Vehicle Fueling Infrastructure},
+  year        = {2014},
+}
+
+@TechReport{R15IRENA2012,
+  author      = {IRENA},
+  institution = {International Renewable Energy Agency},
+  title       = {Biomass for power generation},
+  year        = {2012},
+}
+
+@Misc{R16,
+  author = {RECOPE},
+  title  = {Plan Estratégico 2020-2030},
+  howpublished = {\url{https://www.recope.go.cr/wp-content/uploads/2020/12/20191216_-PLAN-ESTRATEGICO_estruct.pdf}},
+}
+
+@Misc{R17,
+  author = {RECOPE},
+  title  = {Datos Estadísticos Anuales de Importación - RECOPE},
+  howpublished = {\url{https://www.recope.go.cr/productos/estadisticas-de-importacion-y-exportacion/}},
+}
+
+@Article{R18TillBunsen2019,
+  author  = {IEA},
+  journal = {IEA, Paris},
+  title   = {Global EV Outlook 2019},
+  year    = {2019},
+}
+
+@Misc{R19,
+  author = {IMF},
+  title  = {IMF Primary Commodity Prices},
+  howpublished = {\url{https://www.imf.org/en/Research/commodity-prices}},
+}
+
+@Misc{R20,
+  author = {SNC Lavalin},
+  title  = {Perspectiva sobre el potencial uso del gas natural en Costa Rica},
+  howpublished = {\url{https://www.recope.go.cr/wp-content/uploads/2012/09/SNC-Lavalin_Perspectivas_sobre_-uso_-de_-LNGen_CR.pdf}},
+  year   = {2012},
+}
+
+@Misc{R21,
+  author = {NREL},
+  title  = {ATB | NREL},
+  howpublished = {\url{https://atb.nrel.gov/}},
+}
+
+@TechReport{R22IRENA2019,
+  author      = {IRENA},
+  institution = {International Renewable Energy Agency},
+  title       = {Renewable Power Generation Costs in 2018},
+  year        = {2019},
+}
+
+@Misc{R23ICE2019,
+  author = {ICE},
+  title  = {PLAN DE EXPANSION DE LA GENERACION ELÉCTRICA},
+  howpublished = {\url{https://www.grupoice.com/wps/wcm/connect/d91d6f4f-6619-4a2f-834f-6f5890eebb64/PLAN DE EXPANSION DE LA GENERACION 2018-2034.pdf?MOD=AJPERES&CVID=mIeNZKV}},
+  year   = {2019},
+}
+
+@Misc{R24,
+  author = {{Instituto Costarricense de Electricidad}},
+  title  = {Plan de Expansión de la Generación Eléctrica 2020-2035},
+  howpublished = {\url{https://www.grupoice.com/wps/wcm/connect/741c8397-09f0-4109-a444-bed598cb7440/PLAN DE EXPANSI\ON DE LA GENERACI\ON EL\E\ECTRICA 20202035_compressed.pdf?MOD=AJPERES&CVID=nJADNyi}},
+  year   = {2020},
+}
+
+@TechReport{R25,
+  author      = {{Escuela de Ingeniería Eléctrica - Universidad de Costa Rica}},
+  institution = {Escuela de Ingeniería Eléctrica - Universidad de Costa Rica},
+  title       = {Estudio para la caracterización del consumo energético en el sector industrial},
+  year        = {2020},
+}
+
+@TechReport{R26,
+  author      = {{Escuela de Ingeniería Eléctrica - Universidad de Costa Rica},},
+  institution = {Escuela de Ingeniería Eléctrica - Universidad de Costa Rica},
+  title       = {Opciones de descarbonización del consumo energético en el sector industrial},
+  year        = {2020},
+}
+
+@Misc{R27Hall2019,
+  author = {Dale Hall and Nic Lutsey},
+  title  = {Estimating the infrastructure needs and costs for the launch of zero-emission trucks},
+  year   = {2019},
+}
+
+@TechReport{R28Taibi2018,
+  author      = {Emanuele Taibi and Raul Miranda and Wouter Vanhoudt and Thomas Winkel and Jean-Christophe Lanoix and Frederic Barth},
+  institution = {IRENA},
+  title       = {Hydrogen from renewable power: Technology outlook for the energy transition},
+  year        = {2018},
+  publisher   = {IRENA},
+}
+
+@Misc{R30Panteia2020,
+  author = {Element Energy and Jacobs},
+  title  = {Industrial Fuel Switching Market Engagement Study},
+  howpublished = {\url{https://assets.publishing.service.gov.uk/government/uploads/system/uploads/attachment_data/file/824592/industrial-fuel-switching.pdf}},
+  year   = {2018},
+}
+
+@Misc{R29,
+  author = {Panteia},
+  title  = {Cost Figures for Freight Transport-final TechReport},
+  howpublished = {\url{https://www.kimnet.nl/binaries/kimnet/documenten/formulieren/2020/05/26/cost-figures-for-freight-transport/Cost figures for freight transport - final TechReport.pdf}},
+  year   = {2020},
+}
+
+@Article{R31,
+  author  = {A. García-Álvarez and P. J. Pérez-Martínez and I. González-Franco},
+  journal = {Taylor & Francis Group},
+  title   = {Energy Consumption and Carbon Dioxide Emissions in Rail and Road Freight Transport in Spain: A Case Study of Car Carriers and Bulk Petrochemicals},
+  year    = {2013},
+}
+
+@TechReport{R32INCOFER2020,
+  author      = {INCOFER and BCIE and IDOM},
+  institution = {INCOFER and BCIE and IDOM},
+  title       = {Estudios de Factibilidad Técnica, Económico-Financiera, Ambiental, Social y de vulnerabilidad para la Construcción, Equipamiento, Puesta en marcha, Operación y Mantenimiento, bajo la modalidad de Concesión de Obra con Servicio Público, del Sistema de Tren Rápido de Pasajeros (TRP) de la Gran Área Metropolitana (GAM)},
+  year        = {2020},
+}
+
+@Comment{jabref-meta: databaseType:bibtex;}
